--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>GeniPlan - AI Lesson Plan Writer</title>
-  <link rel="icon" type="image/png" href="geniplan-logo.png">
+  <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <style>
     /* CSS styles */
