--- a/index.html
+++ b/index.html
@@ -569,6 +569,38 @@
     <a href="https://discord.gg/6dvR9wqB" target="_blank" class="discord-button">Join Discord</a>
   </section>
 
+  <style>
+    /* ... Previous CSS styles ... */
+
+    /* Art Section */
+    #art-section {
+      background-color: #f9f9f9;
+      padding: 80px 0;
+      text-align: center;
+    }
+
+    #art-section h2 {
+      font-size: 36px;
+      margin-bottom: 40px;
+    }
+
+    #art-section img {
+      max-width: 100%;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* ... Previous CSS styles ... */
+  </style>
+ 
+  <!-- ... Previous HTML code ... -->
+
+  <!-- Art Section -->
+  <section id="art-section">
+    <h2>some of our awesome artworks</h2>
+    <img src="art.png" alt="Artwork" />
+  </section>
+
   <section id="contact" class="contact">
     <div class="contact-content">
       <h2>Contact Us</h2>
