--- a/index.html
+++ b/index.html
@@ -95,22 +95,26 @@
       text-align: center;
     }
 
-    .input-container input[type="text"] {
-      width: 600px;
-      max-width: 100%;
-      padding: 15px;
-      font-size: 18px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      transition: box-shadow 0.3s;
-      display: inline-block;
-    }
-
-    .input-container input[type="text"]:focus {
-      outline: none;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
+     /* Updated input styles */
+     .input-container input[type="text"] {
+        width: 90%;
+        padding: 15px;
+        font-size: 18px;
+        border: none;
+        border-radius: 10px; /* Use a larger value for a more rounded appearance */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: #ffffff; /* Light gray background */
+        color: #333; /* Text color */
+        transition: box-shadow 0.3s, background-color 0.3s, color 0.3s;
+        display: inline-block;
+        outline: none; /* Remove the default outline on focus */
+      }
+  
+      .input-container input[type="text"]:focus {
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        background-color: #fff; /* White background on focus */
+      }
+  
 
     .input-container button {
       margin-top: 20px;
@@ -324,6 +328,40 @@
       cursor: pointer;
     }
 
+    /* Enchanted Label and Button Styles */
+.enchant-label {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  
+  .enchant-label span {
+    font-size: 18px;
+    color: #333;
+  }
+  
+  .enchant-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #EF4146;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
+  
+  .enchant-button:hover {
+    background-color: #EF4146;
+  }
+  
+  .enchant-button:focus {
+    outline: none;
+    background-color: #8e3859;
+  }
+  
+
     /* ... Previous CSS styles ... */
   </style>
  
@@ -362,10 +400,11 @@
       <p>AI-Powered Lesson Plan Writer</p>
     </div>
   </section>
-  
+ 
   <section id="generator">
     <div class="input-container">
       <h3>Generate Lesson Plan</h3>
+      
       <input type="text" id="inputText" placeholder="Enter your topic and requirements...">
       <button id="generateButton" onclick="generateLessonPlan()">Generate Lesson Plan</button>
     </div>
